--- a/app/globals.css
+++ b/app/globals.css
@@ -74,7 +74,7 @@ body {
   background: rgb(81, 81, 81);
 }
 .section {
-  @apply min-h-screen p-8 md:p-16;
+  @apply min-h-screen p-8 md:p-16 scroll-mt-16;
 }
 /* 
 * {
