--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -68,7 +68,7 @@ body {
 }
 
 .title {
-  @apply text-2xl m-8;
+  @apply text-2xl m-8 text-center;
   /* text-left wont be applied bc everything is centered */
 }
 /* 
