--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -64,7 +64,7 @@ body {
   background: rgb(81, 81, 81);
 }
 .section {
-  @apply min-h-screen p-8 md:p-6 scroll-mt-4 flex flex-col items-center;
+  @apply min-h-screen p-8 md:p-6 scroll-mt-4 flex flex-col justify-center items-center;
 }
 
 .title {
